# incosense_25W

./: .devcontainer.json  .envrc.fish  .gitignore  Cargo.toml  Dockerfile.axum  Dockerfile.postgres  configuration.yaml  devenv.nix  docker-compose.yml  future_arch
.sqlx/: query-56fac03187ecf6dc571088249b1ea28708ad47d3fb3fedb1d7ca204ca96b1d57.json
migrations/: 20251114144218_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  strict_form.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: healthcheck_test.rs
