[package]
name = "incosense"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
config = "0.15.19"
hyper = "1.7.0"
serde = { version =  "1.0.228", features=["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.12.24"
