[package]
name = "incosense"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
chrono = "0.4.42"
config = "0.15.19"
hyper = "1.7.0"
serde = { version =  "1.0.228", features=["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["chrono", "fmt", "env-filter", "json", "local-time", "serde", "serde_json", "time", "tracing", "tracing-serde"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.18.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.12.24"
